<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nusim</name>
  <version>0.1.2</version>
  <description>Simulator for the NU slam project.</description>
  <maintainer email="241abhishek@gmail.com">Abhishek Sankar</maintainer>
  <license>APLv2</license>

  <exec_depend>rclcpp</exec_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
